# thegrocer

./: CMakeLists.txt  README.md
include/thegrocer/: basis.hpp  clustering.hpp  kmeans.hpp  thegrocer.hpp
source/: CMakeLists.txt  gen_train.cc  thegrocer.cc
